--- a/.conkyrc
+++ b/.conkyrc
@@ -37,7 +37,7 @@ draw_borders no
 draw_graph_borders yes
 draw_outline no
 draw_shades yes
-gap_x 12
+gap_x 5
 gap_y 32
 maximum_width 308
 max_port_monitor_connections 64
@@ -59,7 +59,7 @@ use_spacer none
 use_xft no
 xftalpha 0.8
 xftfont  Bitstream Vera Sans Mono:size=9
-font 7x13
+font 5x11
 total_run_times 0
 override_utf8_locale no
 
@@ -67,10 +67,8 @@ override_utf8_locale no
 
 TEXT
 ${color #5b6dad}$nodename-XFCE4    ${alignc}$sysname $kernel ${alignr}${time %l:%M %p}
-
 ${color #5b6dad}$hr
-
-${color #5b6dad}System: gentoo-rulebend3r Linux 4.4.6-gentoo
+${color #5b6dad}System: gentoo-rulebend3r Linux 4.9.16-gentoo
 ${color #5b6dad} Uptime:${color #7f8ed3} $uptime ${color #5b6dad}- Load:${color #7f8ed3} $loadavg
 ${color #5b6dad} CPU Frequency:${color #7f8ed3} ${freq_g} Ghz ${color #5b6dad} Maximum:${color #7f8ed3} $freq_g Ghz
 ${color #5b6dad} CPU Usage:${color #7f8ed3} $cpu% ${cpubar}
@@ -78,9 +76,7 @@ ${color #000000}${cpugraph cpu0 32,309 000000 7f8ed3}
 ${color #5b6dad} RAM Usage:${color #7f8ed3} $mem/$memmax - $memperc% ${membar}
 ${color #5b6dad} Swap Usage:${color #7f8ed3} $swap/$swapmax - $swapperc% ${swapbar}
 ${color #5b6dad} Processes:${color #7f8ed3} $processes  ${color #5b6dad}Running:${color #7f8ed3} $running_processes
-
 ${color #5b6dad}$hr
-
 ${color #5b6dad}File Systems:
  ${color #5b6dad}/root ${color #7f8ed3}${fs_used /}/${fs_size /} ${color #7f8ed3}${fs_bar /}
 ## ${color #5b6dad}/ home ${color #7f8ed3}${fs_used /home/rulebend3r/}/${fs_size /home/rulebend3r/} ${color #7f8ed3}${fs_bar /home/rulebend3r/}
@@ -95,21 +91,15 @@ ${color #5b6dad}Mem usage
 ${color #7f8ed3} ${top_mem name 1} ${top_mem pid 1} ${top_mem cpu 1} ${top_mem mem 1}
 ${color #7f8ed3} ${top_mem name 2} ${top_mem pid 2} ${top_mem cpu 2} ${top_mem mem 2}
 ${color #7f8ed3} ${top_mem name 3} ${top_mem pid 3} ${top_mem cpu 3} ${top_mem mem 3}
-
 ${color #5b6dad}$hr
-
 ${color #5b6dad}Monitors          CPU     FAN1   FAN2
-#${color #7f8ed3}                  ${i8k_cpu_temp}C     ${i8k_left_fan_status}    ${i8k_right_fan_status}
-
+#${color #7f8ed3}                  ${i2c_cpu_temp}C     ${i2c_left_fan_status}    ${i2c_right_fan_status}
 ${color #5b6dad}$hr
-
 ${color #5b6dad}Networking:
- ${color #5b6dad}Down:${color #7f8ed3} ${downspeed enp3s0f0} k/s${color #5b6dad}${offset 80}Up:${color #7f8ed3} ${upspeed enp3s0f0} k/s
-${color #000000}${downspeedgraph enp3s0f0 32,150 000000 7f8ed3} ${color #000000}${upspeedgraph enp3s0f0 32,150 000000 7f8ed3}
- ${color #5b6dad}Address: ${color #7f8ed3}${addr enp3s0f0}${alignr}${color #5b6dad}TCP Connections: ${color #7f8ed3}${tcp_portmon 1 65535 count}
-
+ ${color #5b6dad}Down:${color #7f8ed3} ${downspeed enp3s0} k/s${color #5b6dad}${offset 80}Up:${color #7f8ed3} ${upspeed enp3s0} k/s
+${color #000000}${downspeedgraph enp3s0 32,150 000000 7f8ed3} ${color #000000}${upspeedgraph enp3s0 32,150 000000 7f8ed3}
+ ${color #5b6dad}Address: ${color #7f8ed3}${addr enp3s0}${alignr}${color #5b6dad}TCP Connections: ${color #7f8ed3}${tcp_portmon 1 65535 count}
 ${color #5b6dad}$hr
-
 ${color #5b6dad}Port(s)${alignr}#Connections
 
 ${color #5b6dad}Inbound: ${tcp_portmon 1 32767 count}  Outbound: ${tcp_portmon 32768 61000 count}${alignr} ALL: ${tcp_portmon 1 65535 count}
@@ -126,22 +116,7 @@ ${color #5b6dad}Inbound: ${tcp_portmon 1 32767 count}  Outbound: ${tcp_portmon 3
   ${color #7f8ed3}${tcp_portmon 32768 61000 rhost 2} ${alignr} ${tcp_portmon 32768 61000 rservice 2}
   ${color #7f8ed3}${tcp_portmon 32768 61000 rhost 3} ${alignr} ${tcp_portmon 32768 61000 rservice 3}
   ${color #7f8ed3}${tcp_portmon 32768 61000 rhost 4} ${alignr} ${tcp_portmon 32768 61000 rservice 4}
-
 ${color #5b6dad}$hr
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
@@ -173,5 +148,5 @@ ${color #7f8ed3}${alignc}$mpd_status
 
 ${color #5b6dad}$hr
 
-${image /home/rulebend3r/Pictures/gentoologo.png -p 40,920 -s 230x230}
-${image /home/rulebend3r/Pictures/gentoologo.png -p 90,0 -s 15x15}
+${image /home/rulebend3r/Pictures/gentoologo.png -p 40,688 -s 230x230}
+${image /home/rulebend3r/Pictures/gentoologo.png -p 76,0 -s 15x15}
