--- a/.tmux.conf
+++ b/.tmux.conf
@@ -87,6 +87,8 @@ bind-key M-t new-window -n torrent -c $HOME \; \
 ### DESIGN CHANGES ###
 ######################
 
+source /usr/share/powerline/tmux/powerline.conf
+
 # panes
 set -g pane-border-fg black
 set -g pane-active-border-fg brightred
@@ -181,3 +183,5 @@ set -g message-fg colour232
 set -g message-bg colour166
 
 # }
+
+source /usr/share/powerline/tmux/powerline.conf
