--- a/.tmux.conf
+++ b/.tmux.conf
@@ -87,8 +87,6 @@ bind-key M-t new-window -n torrent -c $HOME \; \
 ### DESIGN CHANGES ###
 ######################
 
-source /usr/share/powerline/tmux/powerline.conf
-
 # panes
 set -g pane-border-fg black
 set -g pane-active-border-fg brightred
@@ -184,4 +182,9 @@ set -g message-bg colour166
 
 # }
 
+#Tmux Powerline for Gentoo#
 source /usr/share/powerline/tmux/powerline.conf
+
+#Tmux Powerline for Arch#
+source /usr/lib/python2.7/site-packages/powerline/bindings/tmux/powerline.conf
+
