--- a/.tmux.conf
+++ b/.tmux.conf
@@ -186,5 +186,5 @@ set -g message-bg colour166
 source /usr/share/powerline/tmux/powerline.conf
 
 #Tmux Powerline for Arch#
-source /usr/lib/python2.7/site-packages/powerline/bindings/tmux/powerline.conf
+#source /usr/lib/python2.7/site-packages/powerline/bindings/tmux/powerline.conf
 
